applications/kubernetes/minio-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
  labels:
    app: minio
  namespace: training-app-backend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
        app.kubernetes.io/name: minio
    spec:
      containers:
      - name: minio
        image: quay.io/minio/minio:latest
        command:
        - /bin/bash
        - -c
        args: 
        - minio server /data --address :9000 --console-address :9090
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:  
          - name:  minio-api
            containerPort: 9000
          - name:  minio-console
            containerPort: 9090
              
        volumeMounts:
        - mountPath: /data
          name: minio # Corresponds to the `spec.volumes` Persistent Volume
      nodeSelector:
        kubernetes.io/hostname: k3d-qr-app-server-0 # Specify a node label associated to the Worker Node on which you want to deploy the pod.
      volumes:
      - name: minio
        hostPath: # MinIO generally recommends using locally-attached volumes
          path: /home/oussamaachour/minio # Specify a path to a local drive or volume on the Kubernetes worker node
          type: DirectoryOrCreate # The path to the last directory must exist


---

apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: training-app-backend-prod
  labels: 
    app: minio
spec:
  selector:
    app.kubernetes.io/name: minio
  type : LoadBalancer
  ports:
    - protocol: TCP
      name: minio-api
      port: 9000
      targetPort: 9000
    - protocol: TCP
      name: minio-console
      port: 9090
      targetPort: 9090
  externalIPs:
    - 172.26.0.10
