applications/kubernetes/python.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  labels:
    app: python
  namespace: training-app-backend-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app.kubernetes.io/name: python
        app: python
    spec:
      containers:
      - name: python
        image: oussachour/qr_python_code:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8420
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        #adding commands to troubleshoot
        # command: ["/bin/sh"]
        # args: ["-c", "while true; do sleep 10; done"]
        
---

apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: training-app-backend-prod
spec:
  selector:
    app.kubernetes.io/name: python
  ports:
    - protocol: TCP
      port: 8420
      targetPort: 8420
