applications/kubernetes/backend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-backend
  namespace: training-app-backend-prod
  
spec:
  rules:
  - host: "app.backend.com"
    http:
      paths:
      - pathType: Prefix
        #path: "/api"
        path: "/"
        backend:
          service:
            name: backend-service
            port:
              number: 3000
