applications/kubernetes/minio-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-minio
  namespace: training-app-backend-prod
  labels:
    app: minio
  
spec:
  rules:
  - host: "app.minio.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: minio-service
            port:
              number: 9000
  ingressClassName: nginx
